Live Data/mdapipkg/unpackaged/objects/ProductRouting__c.object
<CustomObject>
    <fields>
        <fullName>RoutingGroup__c</fullName>
        <label>Routing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopicID__c</fullName>
        <description>Used by the community</description>
        <label>Topic ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordid</label>
        <type>Text</type>
    </fields>
    <label>Product Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>recordid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>